pioneers page looks right in crome in responsive check but on mobile, not the same, need fixing

--- a/src/styles/pages/Pioneers.module.scss
+++ b/src/styles/pages/Pioneers.module.scss
@@ -68,5 +68,13 @@
             text-align: center;
             width: 100%;
           }
+          #main_doc {
+            position: relative;
+            width: 100%;
+            top: 0;
+            left: 0;
+            margin-left: 0px;
+            margin-top: 10rem;
+          }
     }
   }
